package Enum;

public enum SpotStatus {
    AVAILABLE,
    OCCUPIED

}
