package Enum;

public enum SpotType {
    SMALL,
    MEDIUM,
    LARGE

}
