package Enum;

public enum VehicleType {
    MOTORCYCLE,
    CAR,
    BUS
}
